Mi parte de moviles

--- a/Proyecto/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto/app/src/main/res/layout/activity_main.xml
@@ -68,9 +68,10 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
             android:layout_marginTop="20dp"
+            android:onClick="viaje"
             android:padding="15dp"
+            android:text="Button"
             android:textSize="24sp" />
 
         <LinearLayout
