--- a/Proyecto/app/src/main/res/layout/fragment_envio.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_envio.xml
@@ -35,12 +35,12 @@
             android:text="A que domicilio enviaremos tu comida?" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/sporden"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <EditText
-            android:id="@+id/editTextText3"
+            android:id="@+id/txtcalle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -48,7 +48,7 @@
             android:inputType="text" />
 
         <EditText
-            android:id="@+id/editTextText5"
+            android:id="@+id/txtcolonia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -56,7 +56,7 @@
             android:inputType="text" />
 
         <EditText
-            android:id="@+id/editTextText4"
+            android:id="@+id/txtciudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -64,7 +64,7 @@
             android:inputType="text" />
 
         <EditText
-            android:id="@+id/editxtPostalCode"
+            android:id="@+id/txtpostal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -75,6 +75,7 @@
             android:id="@+id/btnGuardarDomicilio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:onClick="enviar"
+            android:text="Enviar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
