--- a/Proyecto/app/src/main/res/layout/fragment_gallery.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_gallery.xml
@@ -28,17 +28,18 @@
             android:text="TextView" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal"
+            android:id="@+id/txtprecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="Ingrese cantidad"
             android:inputType="numberDecimal" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/subir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Subri" />
 
         <TextView
             android:id="@+id/textView11"
@@ -47,9 +48,9 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/txtdinero"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="money" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
