--- a/Proyecto/app/src/main/res/layout/fragment_salida.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_salida.xml
@@ -38,6 +38,7 @@
             android:id="@+id/btnSalir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:onClick="salir"
+            android:text="Log out" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
