--- a/Proyecto/app/src/main/res/values/colors.xml
+++ b/Proyecto/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blueMain">#01011F</color>
+    <color name="orangeMain">#EC4815</color>
+    <color name="transparenGrey">#7A90A4C7</color>
+    <color name="transparenGreyText">#4D6D8B</color>
+
 </resources>
