Actualizacion de mi parte de moviles, se encontraron fallas en la seccion de cuenta

--- a/Proyecto/app/src/main/res/layout/fragment_gallery.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_gallery.xml
@@ -39,6 +39,7 @@
             android:id="@+id/subir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="obtenervalor"
             android:text="Subri" />
 
         <TextView
