Creacion de los platillos
Se han creado la interfaz de los platillos asi como un poco de la logica que va a llevar, ademas se solucionaron algunos bugs que daban al momento de ingresar a los framents, se agregaron más opciones para las demas secciones de los fragments como el historial y el envio y sus respectivos iconos y funcionamiento. Etc...

--- a/Proyecto/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Proyecto/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,25 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/inicio_icon"
+            android:title="Inicio" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/cuenta_icon"
+            android:title="Cuenta" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/platillo_icon"
+            android:title="Platillos" />
+
+        <item
+            android:id="@+id/historialFragment"
+            android:title="Historial"
+            android:icon="@drawable/historial_icon"/>
+
+        <item
+            android:id="@+id/envioFragment"
+            android:title="Envio"
+            android:icon="@drawable/envio_icon"/>
     </group>
 </menu>
