--- a/Proyecto/app/src/main/res/layout/fragment_slideshow.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_slideshow.xml
@@ -7,29 +7,24 @@
     tools:context=".ui.slideshow.SlideshowFragment">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="407dp"
+        android:layout_height="725dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="3dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView7"
+            android:src="@drawable/ic_launcher_foreground"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:src="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/textView17"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <ListView
             android:id="@+id/listPlatillos"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
