styles added to home, top bar and side bar

--- a/Proyecto/app/src/main/res/values/colors.xml
+++ b/Proyecto/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blueMain">#01011F</color>
     <color name="orangeMain">#EC4815</color>
+    <color name="blue">#04B0D6</color>
     <color name="transparenGrey">#7A90A4C7</color>
     <color name="transparenGreyText">#4D6D8B</color>
 
