--- a/Proyecto/app/src/main/res/layout/fragment_home.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_home.xml
@@ -6,51 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="156dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21"
-        tools:src="@drawable/restaurant" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="248dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="38dp"
-        tools:src="@drawable/large" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="17dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="11dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/textHomeNameO"
-        android:textColor="@color/orangeMain"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="255dp"
-        android:layout_height="69dp"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="53dp"
-        android:fontFamily="@font/poppins_light"
+        android:fontFamily="@font/poppins"
         android:text="@string/textHome2"
         android:textAlignment="center"
         android:textColor="@color/blueMain"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
@@ -60,71 +29,159 @@
         android:layout_width="379dp"
         android:layout_height="53dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_medium"
         android:text="@string/OrderNow"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="7dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/oo"
+        android:id="@+id/textView21"
+        android:layout_width="171dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="81dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/textHome1"
+        android:textAlignment="textStart"
         android:textColor="@color/blueMain"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        tools:layout_editor_absoluteX="31dp" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="57dp"
         android:layout_height="31dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="21dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/textHomeName"
         android:textColor="@color/blueMain"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
     <TextView
-        android:id="@+id/textView21"
-        android:layout_width="175dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="100dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="@string/textHome1"
-        android:textColor="@color/blueMain"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="15dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="36dp"
+        android:id="@+id/textView7"
+        android:layout_width="17dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="21dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="@string/o"
+        android:text="@string/textHomeNameO"
         android:textColor="@color/orangeMain"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="176dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="148dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/textHome1.2"
+        android:textAlignment="center"
+        android:textColor="@color/blueMain"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="156dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:srcCompat="@drawable/restaurant" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="82dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/large" />
+
+    <TextView
+        android:id="@+id/textView25"
+        android:layout_width="226dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="37dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/textHome3"
+        android:textColor="@color/blueMain"
+        android:textSize="22sp"
+        app:layout_constraintStart_toEndOf="@+id/textView23"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <TextView
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="37dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/textHomeName"
+        android:textColor="@color/blueMain"
+        android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="9dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="37dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/oo"
+        android:textColor="@color/blueMain"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="19dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="37dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/o"
+        android:textColor="@color/orangeMain"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="309dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="53dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/textHome3.1"
+        android:textAlignment="center"
+        android:textColor="@color/blueMain"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
