--- a/Proyecto/app/src/main/res/layout/item_row.xml
+++ b/Proyecto/app/src/main/res/layout/item_row.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="#01011F"
-        android:layout_marginBottom="20dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
@@ -36,18 +35,16 @@
                     android:layout_width="104dp"
                     android:layout_height="40dp"
                     android:padding="7dp"
-                    android:text="TextView"
                     android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/txtCostoPlatillo"
                     android:layout_width="105dp"
                     android:layout_height="40dp"
                     android:padding="7dp"
-                    android:text="TextView"
                     android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
             </LinearLayout>
 
             <TextView
@@ -56,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="7dp"
-                android:text="TextView"
+                android:textSize="17dp"
                 android:textColor="#fff" />
 
         </LinearLayout>
@@ -75,8 +72,7 @@
                 android:background="#01011F"
                 android:padding="10dp"
                 android:scaleType="centerInside"
-                android:src="@mipmap/carrito4"
-                android:text="Button" />
+                android:src="@mipmap/carrito4"/>
         </LinearLayout>
 
     </LinearLayout>
