styles added to register and logo was created

--- a/Proyecto/app/src/main/res/drawable/side_nav_bar.xml
+++ b/Proyecto/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,6 +4,6 @@
         android:angle="135"
         android:centerColor="@color/blue"
         android:endColor="@color/blueMain"
-        android:startColor="@color/orangeMain"
+        android:startColor="@color/blueMain"
         android:type="linear" />
 </shape>
