--- a/Proyecto/app/src/main/res/values/themes.xml
+++ b/Proyecto/app/src/main/res/values/themes.xml
@@ -2,8 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Proyecto" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+          <item name="colorPrimary">@color/blueMain</item>
+        <item name="android:statusBarColor">@color/blueMain</item>
     </style>
+
 
     <style name="Theme.Proyecto" parent="Base.Theme.Proyecto" />
 
