styles added to items

--- a/Proyecto/app/src/main/res/layout/fragment_slideshow.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_slideshow.xml
@@ -6,25 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ui.slideshow.SlideshowFragment">
 
-    <LinearLayout
-        android:layout_width="407dp"
-        android:layout_height="725dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="3dp"
-        android:orientation="vertical"
+    <ListView
+        android:id="@+id/listPlatillos"
+        android:layout_width="414dp"
+        android:layout_height="635dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:src="@drawable/ic_launcher_foreground"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <ListView
-            android:id="@+id/listPlatillos"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="144dp"
+        android:src="@drawable/small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
