--- a/Proyecto/app/src/main/res/values/style.xml
+++ b/Proyecto/app/src/main/res/values/style.xml
@@ -8,6 +8,12 @@
     <!-- Agrega más atributos según tus necesidades -->
   </style>
 
+  <style name="BlueButton" parent="Widget.AppCompat.Button">
+    <item name="android:background">@drawable/blue_button</item>
+    <item name="android:textColor">@color/white</item>
+    <!-- Agrega más atributos según tus necesidades -->
+  </style>
+
   <style name="InputGrey" parent="Widget.AppCompat.EditText">
     <item name="android:background">@drawable/input_grey</item>
     <item name="android:textColor">@color/transparenGreyText</item>
