--- a/Proyecto/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="@string/Password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:padding="15dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
