--- a/Proyecto/app/src/main/res/menu/menu_lateral.xml
+++ b/Proyecto/app/src/main/res/menu/menu_lateral.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Salir"
+        android:title="@string/LogOut"
         app:showAsAction="never" />
 </menu>
