Se repararon los errores en el fragment gallery y Envio, y se comprobo su funcionamiento. Ademas de enlazar el SalidaActivity en MenuLaterar para redirijir, ademnas de actualizar el SharedPreferences a la hora de hacer log out en la Activity de salir

--- a/Proyecto/app/src/main/res/layout/fragment_envio.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_envio.xml
@@ -75,7 +75,6 @@
             android:id="@+id/btnGuardarDomicilio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="enviar"
-            android:text="Enviar" />
+            android:text="enviar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
